--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                      </ul><br>
                     <ul> <h5>Internship and Training</h5>
                         <li> <h6>TATA Power-DDL</h6>
-                    <p>Join Tata Power as intern under IT-Business Analytic from 24th Feb 2021- 23rd April 2021</p></li>
+                    <p>Joined Tata Power as intern under IT-Business Analytic from 24th Feb 2021- 23rd April 2021</p></li>
                    <li><h6>Sparks Foundation</h6>
                    <p>Compleated Web Development Internship.Have a great exprienced and polished my skills such as JavaScript and React.Js during my internshapa.</p></li>
 
