--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="box">
                         <img src="images\th (1).jfif" alt="">
                         <div class="text">Corona Traking</div>
-                        <a href="https://github.com/rohitpandey007"><button>View Project</button></a>
+                        <a href="https://github.com/rohitpandey007/coronatracker.git"><button>View Project</button></a>
                     </div>
                 </div>
                 <div class="card">
