--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column right">
                     <div class="text">I'm Rohit Pandey and I'm a <span class="typing-2"></span></div>
                     <p>My self Rohit pursuing B.tech third year in the stream of computer science with 9.13CGPA from SRM University.My strengths are hard working, easily adaptable to any kind of environment, and team worker.I work as a freelancer.5*Coder on Hakerrank..</p>
-                    <a href="myResume\RohitPande_Resume (1).pdf" download>Download CV</a>
+                    <a href="Rohit_Pandey_Resume.PDF" download>Download CV</a>
                 </div>
             </div>
         </div>
